<resources>
    <string name="app_name">Spyder</string>
    <string name="need_account">need account?</string>
    <string name="log_in">Log In</string>
    <string name="username"> Username</string>
    <string name="app_icon">app_icon</string>
    <string name="passwoard">Passwoard</string>
    <string name="android_nbackground_nanimated_gradient">Android  Background  Animated Gradient</string>
    <string name="next">next</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="to_get_movie_recommendations">to get Movie Recommendations</string>
    <string name="rate_5_movies">Please rate <b>ANY 5</b> movies</string>
    <string name="proceed">Proceed</string>
    <string name="Sign_Up">Sign Up</string>
</resources>
