<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.vinay.spyder.activities.AskToRate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal|center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_local_movies_black_24dp"
            android:tint="@color/tw__solid_white"
            android:id="@+id/centerimg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_5_movies"
            android:textColor="@color/tw__solid_white"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/to_get_movie_recommendations"
            android:textColor="@color/tw__solid_white"
            android:gravity="center"
            android:textSize="15sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proceed"
            android:layout_margin="10dp"
            android:textColor="@color/tw__solid_white"
            android:backgroundTint="#402063"
            android:text="@string/proceed"/>

    </LinearLayout>

</RelativeLayout>
