<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_dialog_dialer"
        android:contentDescription="@string/app_icon"
        android:layout_gravity="center_horizontal">
        <requestFocus/>
    </ImageView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@drawable/ic_person_outline_white_24dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#cccccc"
            android:textSize="20sp"
            tools:targetApi="lollipop" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/passwoard"
            android:inputType="textPassword"
            android:textColor="#cccccc"
            android:textSize="20sp"
            tools:targetApi="lollipop" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="Re-enter passwoard"
            android:inputType="textPassword"
            android:textColor="#cccccc"
            android:textSize="20sp"
            tools:targetApi="lollipop" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#79a209df"
        android:text="@string/Sign_Up"
        android:textColor="#cccccc"
        android:layout_marginBottom="10dp"/>


</LinearLayout>